bin/tests/snapshots/eta_reduction__371c868dbc9581a6fc41c7085146a422_lint_errfmt.snap
---
source: bin/tests/eta_reduction.rs
---
let double = x: x * 2; in map (x: double x) [1 2 3]
---
<temp_file_path>>1:32:W:7:Found eta-reduction: `double`
