bin/tests/snapshots/eta_reduction__fix_1dfb112ec87a995d569b8e6355da65f36608c45dd13328e9b5d1b1f85143ac5f.snap
---
source: bin/tests/eta_reduction.rs
---
let f = { double = x: x *2; val = 2; }; in map (f: {inherit f;}.double f.val) [ f ]

---
