bin/tests/snapshots/eta_reduction__fix_d3f9eae8a432be6898a30282996b52f32fe0e988eacae0a39672af994682ef6e.snap
---
source: bin/tests/eta_reduction.rs
---
let double = x: x * 2; in map (x: double x) [1 2 3]

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let double = x: x * 2; in map (x: double x) [1 2 3]
+let double = x: x * 2; in map double [1 2 3]
