bin/tests/snapshots/eta_reduction__lint_1753a4ee5edee65b9e4cbd0efbbfb45be4abfe4c556a183b4e56dd3e2ebb200e.snap
---
source: bin/tests/eta_reduction.rs
---
expression:
let f = { double = x: x *2; val = 2; }; in map (f: {inherit f;}.double f.val) [ f ]
---
