bin/tests/snapshots/eta_reduction__lint_2af9e5afbc8ddbb1cdd61c38fa47661f18ef38e477f843fa6eb8fe3f11d76462.snap
---
source: bin/tests/eta_reduction.rs
---
let f = { double = x: x *2; val = 2; }; in map (f: f.double f.val) [ f ]
---
