bin/tests/snapshots/eta_reduction__lint_371c868dbc9581a6fc41c7085146a422829b37c0e7d4ec0cf2b2d48d2e116b71.snap
---
source: bin/tests/eta_reduction.rs
expression: snapshot
---
expression:
let double = x: x * 2; in map (x: double x) [1 2 3]
---
[W07] Warning: This function expression is eta reducible
   ╭─[<temp_file_path>:1:32]
   │
 1 │ let double = x: x * 2; in map (x: double x) [1 2 3]
   ·                                ─────┬─────  
   ·                                     ╰─────── Found eta-reduction: double
───╯
